make file done and swagger is up and running
