# docs/swagger.json
@@ -10,7 +10,10 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Show an account",
+                "tags": [
+                    "Jobs"
+                ],
+                "summary": "Get microsoft Jobs",
                 "responses": {
                     "200": {
                         "description": "OK",
